--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^7.1.3",
-        "illuminate/support": "^5.7"
+        "php": ">=7.1.3",
+        "illuminate/support": ">=5.7"
     },
     "autoload": {
         "psr-4": {
